--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.scss
@@ -2,6 +2,11 @@
     font-size: 30px;
 }
 
+.divider {
+    width: 1px;
+    background: silver;
+}
+
 // TODO: adding height to the parent container and just using flex is the way to go: need to fix home.component styling 
 // and other components where the height is constantly cascaded (bad practice)
 .main-container {
@@ -13,6 +18,7 @@
     height: 100%;
     display: flex; 
     flex-direction: column;
+    flex-wrap: wrap;
     .nonprofit-toolbar {
         display: flex;
         flex-direction: row;
@@ -23,12 +29,14 @@
             // nested flexbox to align title text properly in center
             display: flex;
             flex: 0.15 0.25 auto;
+            overflow: hidden;
             background-color: silver;
             margin: 1%;
             border-radius: 15px;
             align-items: center;
             justify-content: center;
             font-size: 25px;
+            flex-wrap: wrap;
         }
         .links-box {
             display: flex;
@@ -47,7 +55,7 @@
         .donate-box {
             display: flex;
             flex-direction: column;
-            flex: 0.05;
+            flex: 0.15;
             background-color: white;
             margin: 1%;
             border-radius: 15px;
@@ -74,30 +82,76 @@
         .sidebar-container {
             flex: 1;
             background-color: silver;
+            // controls width of sidebar
+            width: 50%;
             .card-container {
                 height: 100%;
-                width: 100%;
+                width: 96%;
                 margin-left: 2%;
                 margin-right: 2%;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
+                .card-title {
+                    font-size: 30px;
+                    text-align: center;
+                }
                 .rating-card {
                     flex: 0.2;
-                    .rating-title {
-                        font-size: 35px;
-                        text-align: center;
-                    }
-                    .rating-value {
-                        font-size: 30px;
-                        text-align: center;
+                    .rating-content-container {
+                        display: flex; 
+                        flex-direction: row;
+                        flex: 1;
+                        .current-rating-container {
+                            display: flex; 
+                            flex-direction: column;
+                            flex: 0.5;
+                            .current-rating-title {
+                                text-align: center;
+                                font-size: 20px;
+                            }
+                            .current-rating-value {
+                                font-size: 30px;
+                                text-align: center;
+                            }
+                            .current-rating-subtitle {
+                                text-align: center;
+                                font-size: 10px;
+                            }
+                        }
+                        .your-rating-container {
+                            display: flex; 
+                            flex-direction: column;
+                            flex: 0.5;
+                            .your-rating-title {
+                                text-align: center;
+                                font-size: 20px;
+                            }
+                            .rating-bar {
+                                flex: 1;
+                                align-self: center;
+                            }
+                        }
                     }
                 }
                 .mission-card{
                     flex: 0.2;
                 }
                 .efficiency-card{
+                    display: flex; 
+                    flex-direction: column;
                     flex: 0.2;
+                    .efficiency-title-container {
+                        flex: 0.2;
+                    }
+                    .efficiency-content-container {
+                        flex: 0.8;
+                        .efficiency-value {
+                            font-size: 40px;
+                            font-weight: bold;
+                            text-align: center;
+                        }
+                    }
                 }
                 .compensation-card{
                     flex: 0.2;
