--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,10 @@
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
+// Import for ngx-bar-rating 
+@import '~ngx-bar-rating/themes/br-fontawesome-o-theme';
+@import '~ngx-bar-rating/themes/br-default-theme';
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
