added all cards to sidebar (placeholders). design is a little more responsive (but still really terrible on mobile with large nonprofit organization names

--- a/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
+++ b/src/app/nonprofit/nonprofit-page/nonprofit-page.component.html
@@ -85,6 +85,12 @@
                         <p>3. {{getNonprofitTopCompensation().name}}: ${{getNonprofitTopCompensation().compensation}}</p>
                     </mat-card-content>
                 </mat-card>
+
+                    <button mat-button>
+                        <mat-card class="more-stats-card">
+                            More Stats...
+                        </mat-card>
+                    </button>
             </div>
         </mat-sidenav>
     
