added placeholder login / register buttons to nav bar for testing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div class="main-container">
   <!--TOOLBAR / NAV BAR HERE-->
   <div class="nav-bar">
+    <button (click)="navigateTo('login')">Login</button>
+    <button (click)="navigateTo('register')">Register</button>
   </div>
 
   <!--ROUTER OUTLET-->
