--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="nav-bar">
     <button (click)="navigateTo('login')">Login</button>
     <button (click)="navigateTo('register')">Register</button>
+    <button (click)="this.authService.logout()">Logout</button>
   </div>
 
   <!--ROUTER OUTLET-->
