Added very basic outline for toolbar, testing commits

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,9 +69,13 @@
         </div>
     </mat-sidenav>
 
+
     <!--HOME PAGE CONTENT GOES HERE-->
     <mat-sidenav-content class="main-content-container">
         <div class="main-content">
+            <div class="toolbar">
+                <h1>Hello world!</h1>
+            </div>
             <div class="payment-feed-container">
             </div>
         </div>
