--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -110,6 +110,11 @@
         background-color: teal;
         align-items: center;
         justify-content: center;
+        .toolbar {
+            background-color: red;
+            width:100%;
+            color: green;
+        }
         .payment-feed-container {
             width: 90%;
             flex: 0.9;
