--- a/src/app/nonprofit-search-page/nonprofit-search-page.component.html
+++ b/src/app/nonprofit-search-page/nonprofit-search-page.component.html
@@ -1,1 +1,5 @@
-<p>nonprofit-search-page works!</p>
+<div class="main-container">
+    <div class="nonprofits-container">
+        <h1 class="title">Nonprofit Search Page</h1>
+    </div>
+</div>
