--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,3 @@
-h1 {
-    text-align: center;
-}
 .main-container {
     height: 100%;
     display: flex;
@@ -8,10 +5,37 @@ h1 {
     flex: 1;
     background-color: grey;
 }
+
+.spacer {
+    flex: 0.99 0.99 auto;
+}
+
 .nav-bar {
-    height: 10%;
+    height: 15%;
     flex: 0.1;
-    background-color: blue;
+    .nav-toolbar {
+        height: 100%;
+        .top-toolbar-row {
+            background-image: linear-gradient(to right,#0077b6, #56a6e9);
+            .icon {
+                font-size: 40px;
+            }
+        }
+        .bottom-toolbar-row {
+            display: flex;
+            background-color: #004c86;
+            overflow: hidden;
+            align-items: center;
+            justify-content: center;
+            .search-bar {
+                height: 100%;
+                font-size: 15px;
+            }
+            .toolbar-main-button {
+                font-size: 25px;
+            }
+        }
+    }
 }
 .content-scroll-container {
     height: 90%;
