--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -73,10 +73,14 @@
     <!--HOME PAGE CONTENT GOES HERE-->
     <mat-sidenav-content class="main-content-container">
         <div class="main-content">
-            <div class="toolbar">
-                <h1>Hello world!</h1>
-            </div>
             <div class="payment-feed-container">
+                <!-- add here -->
+                <h2>Add payment feed here</h2>
+                <ul *ngFor="let donations of getDonations().slice(0,5)">
+                    <p>{{donations.donorName}}, {{donations.donationDescription}},
+                        {{donations.donationCharityName}} </p>
+                </ul>
+
             </div>
         </div>
 
