--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -115,6 +115,10 @@
             flex: 0.9;
             background-color: #00BFA5;
             border-radius: 20px;
+            .paymentFeed {
+                margin: 10px;
+                width: 80%;
+            }
         }
     }
     .vertical-toggle-button {
