--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,140 +1,102 @@
-@import '../../styles/_variables.scss';
+@import '../../styles/variables';
 
-.sidenav-container {
-    display: flex;
+.divider {
+    width: 100%; 
+    background-color: silver;
+    height: 1px;
+}
+
+.main-container {
+    display: flex; 
     flex-direction: row;
-    height: 100%;
-    width: 100%;
-}
-
-.card-title-button {
-    font-size: 25px;
-}
-
-.sidenav-content-container {
-    display: flex;
-    flex-direction: column;
+    min-height: 100%; 
     flex: 1;
-    height: 100%;
-    width: 40%;
-    background-color: $accent-2;
-    .card-container {
-        margin-left: 2%;
-        margin-right: 2%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        .section1 {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            flex: 0.2;
-            .profile-card {
-                flex: 1;
-                background-color: $primary-off-white;
-                .mat-card-content {
-                    display: flex;
-                    flex-direction: column;
-                    text-align: center;
-                    .fav-container {
-                        display: flex; 
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                        align-self: flex-start;
-                        .favorites-list {
-                            flex: 1;
-                            .fav {
-                            }
-                            .fav:hover {
-                                background-color: $primary-1;
-                            }
-                        }
-                    }
-                    .more-button {
-                        font-size: 25px;
-                        background-color: $accent-4;
-                        color: $primary-off-white;
-                    }
-                    .more-button:hover {
-                        background-color: $accent-2;
-                    }
-                }
-            }
-        }
-        .section2 {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            flex: 0.1;
-            .friends-card {
-                flex: 1;
-                .friends-container {
-                    display: flex;
-                    flex-direction: row;
-                    flex-wrap: wrap;
-                    justify-content: space-evenly;
-                }
-                .mat-card-footer {
-                    text-align: center;
-                }
-            }
-        }
-        .section3 {
-            height: 100%;
-            display: flex;
-            flex: 0.1;
-            flex-direction: column;
-            .progress-bar-card {
-                flex: 1;
-                .mat-card-content {
-                    display: flex;
-                    flex-direction: column;
-                    .mat-progress-bar {
-                        height: 2vh;
-                    }
-                }
-                .mat-card-footer {
-                    text-align: center;
-                }
-            }
-        }
-        .section4 {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            flex: 0.2;
-            .account-stats-card {
-                text-align: center;
-                flex: 1;
-            }
-        }
-    }
-}
+    background-color: $primary-1;
 
-.main-content-container {
-    display: flex;
-    flex-grow: 1;
+    // MAIN CONTENT
     .main-content {
-        display: flex;
+        display: flex; 
         flex-direction: column;
-        flex: 1;
-        background-color: $accent-1;
-        align-items: center;
+        flex: 1 0 800px;
         justify-content: center;
+        margin: 5%;
         .payment-feed-container {
-            width: 90%;
-            flex: 0.9;
-            background-color: $accent-3;
+            display: flex; 
+            flex-direction: column;
+            flex: 0.9 0.9 500px;
+            background-color: $primary-2;
             border-radius: 20px;
         }
     }
-    .vertical-toggle-button {
-        min-width: 2vh;
-        background-color: $primary-1;
+    .sidebar-button {    
+        flex: 0 0 10px;
+        background-color: $accent-2;
     }
-    .vertical-toggle-button:hover {
-        background-color: $primary-3;
+    .sidebar-button:hover {
+        background-color: $accent-4;
+    }
+
+    // SIDEBAR
+    .sidebar-content{
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
+        flex: 0.2 0.2 350px; 
+        background-color: $accent-3;
+        justify-content: space-around;
+
+        // global styles for sidebar 
+        .mat-card {
+            margin-left: 1%;
+            margin-right: 1%;
+        }
+        .card-title-button-container {
+            text-align: center;
+            .card-title-button {
+                font-size: 20px;
+            }
+            .card-title-button:hover {
+                background-color: $accent-3; 
+                color: #FEFEFA;
+            }
+        }
+        // individual card styles
+        .profile-card {
+            flex: 0.2 0.25 0;
+            .favorite-nonprofit {
+                font-size: 15px;
+            }
+            .favorite-nonprofit:hover {
+                background-color: $accent-4;
+                color: $accent-1;
+            }
+            .more-button-container {
+                text-align: center;
+                .more-button {
+                    background-color: $accent-3;
+                    color: #FEFEFA;
+                }
+            }
+        }  
+        .friends-card {
+            flex: 0.15 0.2 0;
+            .badge-container {
+                display: flex; 
+                justify-content: space-around;
+            }
+
+        }  
+        .progress-bar-card {
+            flex: 0.15 0.2 0;
+            .progress-bar {
+                height: 12px;
+            }
+            .progress-bar-caption {
+                font-style: italic;
+            }
+        }  
+        .account-stats-card {
+            flex: 0.15 0.2 0;
+        }  
     }
 }
-
