--- a/src/app/nonprofit-search-page/nonprofit-search-page.component.scss
+++ b/src/app/nonprofit-search-page/nonprofit-search-page.component.scss
@@ -1,3 +1,6 @@
+@import '../../styles/variables';
+
+
 .title {
     text-align: center;
 }
@@ -8,8 +11,8 @@
     flex-direction: column;
     .nonprofits-container {
         flex: 1;
-        background-color: silver;
+        background-color: $primary-2;
         margin: 5%;
-        border-radius: 1%;
+        border-radius: 20px;
     }
 }
