--- a/src/app/user/profile-page/profile-page.component.scss
+++ b/src/app/user/profile-page/profile-page.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 .title {
     text-align: center;
 }
@@ -8,8 +10,8 @@
     flex-direction: column;
     .profile-container {
         flex: 1;
-        background-color: silver;
+        background-color: $primary-2;
         margin: 5%;
-        border-radius: 1%;
+        border-radius: 20px;
     }
 }
