--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="main-container">
     <div class="main-content">
         <div class="payment-feed-container">
-            Testtesttesttest            Testtesttesttest
-            Testtesttesttest
-            Testtesttesttest
-            Testtesttesttest
-            Testtesttesttest
-            Testtesttesttest
-            TesttesttesttestTesttesttesttestTesttesttesttestTesttesttesttestTesttesttesttest
+            Test Content. Test Content.
+            Test Content. Test Content.
+            Test Content. Test Content.
+            Test Content. Test Content.
+            Test Content. Test Content.
+            Test Content. Test Content.
+
         </div>
     </div>
 
