--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,42 +4,47 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    flex: 1;
     background-color: grey;
-}
-
-.spacer {
-    flex: 0.99 0.99 auto;
-}
-
-.nav-bar {
-    flex: 0.1;
-    .nav-toolbar {
-        height: 100%;
-        .top-toolbar-row {
-            background-image: linear-gradient(to right,#0077b6, #56a6e9);
-            .icon {
-                font-size: 40px;
+    .nav-bar {
+        flex: 0.1;
+        .nav-toolbar {
+            height: 100%;
+            .top-toolbar-row {
+                background-image: linear-gradient(to right,#0077b6, #56a6e9);
+                .icon {
+                    font-size: 40px;
+                }
             }
-        }
-        .bottom-toolbar-row {
-            display: flex;
-            background-color: #004c86;
-            overflow: hidden;
-            align-items: center;
-            justify-content: center;
-            .search-bar {
-                height: 100%;
-                font-size: 15px;
-            }
-            .toolbar-main-button {
-                font-size: 25px;
+            .bottom-toolbar-row {
+                display: flex;
+                background-color: #004c86;
+                overflow: hidden;
+                align-items: center;
+                justify-content: center;
+                .vertical-divider {
+                    height: 70%; 
+                    width: 0.08px; 
+                    background-color: $accent-2;
+                    opacity: 0.3;
+                }
+                .search-bar {
+                    height: 100%;
+                    font-size: 15px;
+                }
+                .toolbar-main-button {
+                    font-size: 20px;
+                    height: 100%;
+                    border-radius: 0px;
+                }
             }
         }
     }
+    .content-scroll-container {
+        flex: 0.9 0.9 auto;
+        background-color: $primary-1;
+    }
 }
-.content-scroll-container {
-    height: 90%;
-    flex: 0.9;
-    background-color: $primary-1;
+
+.spacer {
+    flex: 0.99 100 0;
 }
