--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,17 +7,30 @@
     .nav-bar {
         flex: 0.1;
         .nav-toolbar {
-            height: 100%;
             .top-toolbar-row {
                 background-image: linear-gradient(to right,#0077b6, #56a6e9);
-                .icon {
-                    font-size: 40px;
+                .centered-content {
+                    display: flex;
+                    align-items: center;
+                    height: 100%;
+                    .search-bar {
+                        height: 100%;
+                        font-size: 15px;
+                        margin-right: 10px;
+                    }
+                    .account-button {
+                        height: 100%;
+                    }
+                    .icon {
+                        font-size: 40px;
+                        width: 40px;
+                        height: 40px;
+                    }
                 }
             }
             .bottom-toolbar-row {
                 display: flex;
                 background-color: $accent-4;
-                overflow: hidden;
                 align-items: center;
                 justify-content: center;
                 .vertical-divider {
@@ -25,10 +38,6 @@
                     width: 0.08px; 
                     background-color: $accent-2;
                     opacity: 0.3;
-                }
-                .search-bar {
-                    height: 100%;
-                    font-size: 15px;
                 }
                 .toolbar-main-button {
                     font-size: 20px;
@@ -38,9 +47,79 @@
             }
         }
     }
-    .content-scroll-container {
-        flex: 0.9 0.9 auto;
+    .content-container {
+        display: flex; 
+        flex-direction: row;
+        flex: 1 1 0;
         background-color: $primary-1;
+        .content-scroll-container {
+            flex: 1;
+        }
+        .sidebar-content {
+            display: flex;
+            flex-direction: column;
+            flex: 0.1 0.1 300px;
+
+            position: absolute;
+            height: calc(100% - 128px);
+            right: 0;
+            z-index: 1;
+            background-color: $accent-3;
+            // global styles for sidebar 
+            .mat-card {
+                margin-left: 2%;
+                margin-right: 2%;
+                margin-top: 2%;
+            }
+            .card-title-button-container {
+                text-align: center;
+                .card-title-button {
+                    font-size: 20px;
+                }
+                .card-title-button:hover {
+                    background-color: $accent-3; 
+                    color: #FEFEFA;
+                }
+            }
+            // individual card styles
+            .profile-card {
+                flex: 0.2 0.25 0;
+                .favorite-nonprofit {
+                    font-size: 15px;
+                }
+                .favorite-nonprofit:hover {
+                    background-color: $accent-4;
+                    color: $accent-1;
+                }
+                .more-button-container {
+                    text-align: center;
+                    .more-button {
+                        background-color: $accent-3;
+                        color: #FEFEFA;
+                    }
+                }
+            }  
+            .friends-card {
+                flex: 0.15 0.2 0;
+                .badge-container {
+                    display: flex; 
+                    justify-content: space-around;
+                }
+
+            }  
+            .progress-bar-card {
+                flex: 0.15 0.2 0;
+                .progress-bar {
+                    height: 12px;
+                }
+                .progress-bar-caption {
+                    font-style: italic;
+                }
+            }  
+            .account-stats-card {
+                flex: 0.15 0.2 0;
+            }  
+        }
     }
 }
 
