--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -120,5 +120,33 @@
     .vertical-toggle-button:hover {
         background-color: #A7FFEB;
     }
+
+    .home-view-placeholder {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        background-color: red;
+        align-items: center;
+        justify-content: center;
+    }
+
+
+
 }
+.altViewNavigation {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    .altViewButtons {
+        flex: 1;
+        .alt-view-button {
+         background-color: green;
+     }
+    }
+
+}
+
+
+
+
 
