Centered paymentFeedCards and clarified class names

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -115,8 +115,10 @@
             flex: 0.9;
             background-color: #00BFA5;
             border-radius: 20px;
-            .paymentFeed {
-                margin: 10px;
+            
+            .paymentFeedCards {
+                margin: 0 auto;
+                margin-bottom: 10px;
                 width: 80%;             
             }
         }
