--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -75,16 +75,16 @@
         <div class="main-content">
             <div class="payment-feed-container">
                 <br>
-                <mat-card class="paymentFeed" *ngFor="let donations of getDonations().slice(0,3)">
+                <mat-card class="paymentFeedCards" *ngFor="let donations of getDonations().slice(0,3)">
                     <mat-card-header>
-                        <mat-card-title class="paymentFeedDonor">
+                        <mat-card-title class="paymentFeedCardTitle">
                             {{donations.donorName}} donated to {{donations.donationCharityName}}
                         </mat-card-title>
                     </mat-card-header>
-                    <mat-card-content class="paymentFeedDescription">
+                    <mat-card-content class="paymentFeedCardDescription">
                         {{donations.donationDescription}}
                     </mat-card-content>
-                    <mat-card-actions class="card-actions">
+                    <mat-card-actions class="paymentFeed-card-actions">
                         <button mat-button>LIKE</button>
                         <button mat-button>SHARE</button>
                     </mat-card-actions>
