--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -64,32 +64,26 @@
 
     <!--HOME PAGE CONTENT GOES HERE-->
     <mat-sidenav-content class="main-content-container">
-        <ng-container *ngIf ="mainContentOpened">
             <div class="main-content">
-                <div class="payment-feed-container">
-                </div>
+              <ng-container *ngIf="!altViewOpened">
+                   <div class="payment-feed-container">
+                   </div>
+                </ng-container>
+                <ng-container *ngIf="altViewOpened">
+                    <div class="home-view-placeholder" >
+                    </div>
+                </ng-container>
             </div>
-        </ng-container>
-
-        <ng-container *ngIf ="altViewOpened">
-            <div class ="home-view-placeholder" >
-            </div>
-        </ng-container>
-
         <button (click)="toggleSideNavOpened()" class="vertical-toggle-button">
             {{getSidenavButtonText()}}
         </button>
-
     </mat-sidenav-content>
-
-
-
 </mat-sidenav-container>
 
 <div class="altViewNavigation">
     <mat-card class="altViewButtons">
         <mat-card-content>
-            <button mat-button-mat-raised-button (click)="toggleAltView()" class="alt-view-button">View</button>
+            <button mat-raised-button (click)="toggleAltView()" class="alt-view-button">View</button>
         </mat-card-content>
     </mat-card>
 </div>
